# sensor-stream

./: README.md  disclaimer.md  privacy-policy.md  server.py
JavaInterface/: settings.gradle.kts
JavaInterface/app/: CMakeLists.txt  build.gradle.kts
JavaInterface/app/release/: app-arm64-v8a-release.apk  app-armeabi-v7a-release.apk  app-universal-release.apk  app-x86-release.apk  app-x86_64-release.apk  output-metadata.json
JavaInterface/app/release/baselineProfiles/0/: app-arm64-v8a-release.dm  app-universal-release.dm  app-x86-release.dm  app-x86_64-release.dm
JavaInterface/app/release/baselineProfiles/1/: app-armeabi-v7a-release.dm  app-universal-release.dm  app-x86-release.dm  app-x86_64-release.dm
JavaInterface/app/src/androidTest/java/com/example/javainterface/: ExampleInstrumentedTest.java
JavaInterface/app/src/main/: AndroidManifest.xml
JavaInterface/app/src/main/cpp/: getAcc.cpp  getSensorData.cpp  native-lib.cpp
JavaInterface/app/src/main/java/com/example/javainterface/: MainActivity.java  MyVpnService.java
JavaInterface/app/src/main/res/layout/: activity_main.xml
JavaInterface/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
JavaInterface/app/src/main/res/values-night/: themes.xml
JavaInterface/app/src/test/java/com/example/javainterface/: ExampleUnitTest.java
JavaInterface/gradle/wrapper/: gradle-wrapper.properties
raw/: sensor_data_20240914-224832.csv  sensor_data_20240914-230727.csv
